--- a/index.html
+++ b/index.html
@@ -1,90 +1,195 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Sistema de Rastreabilidade de Frota</title>
-<style>
-body {
-  margin:0;
-  font-family: Arial, sans-serif;
-  background: url('Terminal_de_onibus_Pca.das_Bandeiras_01.jpg') no-repeat center center fixed;
-  background-size: cover;
-  position: relative;
-  color: #fff;
-}
-body::before {
-  content:"";
-  position: fixed;
-  top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.4);
-  z-index: -1;
-}
-header { text-align:center; padding:40px; }
-header h1 { margin:0; font-size:36px; text-shadow: 2px 2px 4px #000; }
-section { display:flex; justify-content:center; margin-top:100px; gap:50px; }
-button {
-  padding:20px 30px;
-  font-size:20px;
-  border:none;
-  border-radius:10px;
-  cursor:pointer;
-  background: #2e86c1;
-  color:white;
-  box-shadow: 2px 2px 5px #000;
-}
-button:hover { background:#1b4f72; }
-.duvidas-ajuda {
-  position:fixed;
-  bottom:30px;
-  right:30px;
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-}
-.duvidas-ajuda button {
-  padding:10px 15px;
-  border-radius:6px;
-  border:none;
-  background:#28b463;
-  color:white;
-  cursor:pointer;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema de Rastreabilidade de Frota</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #004aad;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        section {
+            background-color: white;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #004aad;
+        }
+
+        button {
+            margin-top: 10px;
+            padding: 8px 12px;
+            background-color: #004aad;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #003380;
+        }
+
+        .output {
+            margin-top: 10px;
+            background-color: #eaeaea;
+            padding: 10px;
+            border-radius: 5px;
+            max-height: 200px;
+            overflow-y: auto;
+            font-family: monospace;
+        }
+
+        input {
+            padding: 5px;
+            margin: 5px 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Sistema de Rastreabilidade de Frota</h1>
+    </header>
 
-<header>
-  <h1>Sistema de Rastreabilidade de Frota</h1>
-  <p>Bem-vindo! Selecione uma opção abaixo:</p>
-</header>
+    <main>
+        <!-- Motoristas -->
+        <section>
+            <h2>Motoristas</h2>
+            <input type="text" id="nomeMotorista" placeholder="Nome">
+            <input type="text" id="cpfMotorista" placeholder="CPF">
+            <button onclick="adicionarMotorista()">Adicionar Motorista</button>
+            <div id="saidaMotoristas" class="output"></div>
+        </section>
 
-<section>
-  <button onclick="location.href='motorista.html'">Motorista</button>
-  <button onclick="location.href='usuario.html'">Usuário</button>
-  <button onclick="location.href='rastreabilidade.html'">Rastreabilidade</button>
-</section>
+        <!-- Ônibus -->
+        <section>
+            <h2>Ônibus</h2>
+            <input type="text" id="placaOnibus" placeholder="Placa">
+            <input type="number" id="idMotoristaOnibus" placeholder="ID Motorista">
+            <button onclick="adicionarOnibus()">Adicionar Ônibus</button>
+            <div id="saidaOnibus" class="output"></div>
+        </section>
 
-<div class="duvidas-ajuda">
-  <button onclick="scrollPara('duvidas')">Dúvidas</button>
-  <button onclick="scrollPara('ajuda')">Ajuda</button>
-</div>
+        <!-- Linhas -->
+        <section>
+            <h2>Linhas</h2>
+            <input type="text" id="nomeLinha" placeholder="Nome da Linha">
+            <button onclick="adicionarLinha()">Adicionar Linha</button>
+            <div id="saidaLinhas" class="output"></div>
+        </section>
 
-<section id="duvidas" style="display:none;">
-  <h2>Dúvidas Frequentes</h2>
-  <p>Perguntas comuns e respostas.</p>
-</section>
+        <!-- Rotas -->
+        <section>
+            <h2>Rotas</h2>
+            <input type="number" id="linhaRota" placeholder="ID da Linha">
+            <input type="text" id="origemRota" placeholder="Origem">
+            <input type="text" id="destinoRota" placeholder="Destino">
+            <button onclick="adicionarRota()">Adicionar Rota</button>
+            <div id="saidaRotas" class="output"></div>
+        </section>
 
-<section id="ajuda" style="display:none;">
-  <h2>Ajuda</h2>
-  <p>Suporte e instruções.</p>
-</section>
+        <!-- Usuários -->
+        <section>
+            <h2>Usuários</h2>
+            <input type="text" id="nomeUsuario" placeholder="Nome">
+            <input type="email" id="emailUsuario" placeholder="Email">
+            <button onclick="adicionarUsuario()">Adicionar Usuário</button>
+            <div id="saidaUsuarios" class="output"></div>
+        </section>
 
-<script>
-function scrollPara(id){
-  const el = document.getElementById(id);
-  if(el){ el.scrollIntoView({behavior:'smooth'}); }
-}
-</script>
+        <!-- Rastreabilidade -->
+        <section>
+            <h2>Rastreabilidade</h2>
+            <input type="number" id="onibusRastreio" placeholder="ID Ônibus">
+            <input type="number" id="motoristaRastreio" placeholder="ID Motorista">
+            <input type="number" id="rotaRastreio" placeholder="ID Rota">
+            <button onclick="adicionarRastreabilidade()">Adicionar Registro</button>
+            <div id="saidaRastreabilidade" class="output"></div>
+        </section>
+    </main>
 
+    <!-- Scripts JS -->
+    <script src="js/motorista.js"></script>
+    <script src="js/onibus.js"></script>
+    <script src="js/linhas.js"></script>
+    <script src="js/rotas.js"></script>
+    <script src="js/usuario.js"></script>
+    <script src="js/rastreabilidade.js"></script>
+
+    <script>
+        // Funções de interação com o front
+
+        function adicionarMotorista() {
+            const nome = document.getElementById('nomeMotorista').value;
+            const cpf = document.getElementById('cpfMotorista').value;
+            const id = motoristas.length + 1;
+            addMotorista(id, nome, cpf);
+            document.getElementById('saidaMotoristas').textContent = JSON.stringify(motoristas, null, 2);
+        }
+
+        function adicionarOnibus() {
+            const placa = document.getElementById('placaOnibus').value;
+            const motoristaId = Number(document.getElementById('idMotoristaOnibus').value);
+            const id = onibus.length + 1;
+            addOnibus(id, placa, motoristaId);
+            document.getElementById('saidaOnibus').textContent = JSON.stringify(onibus, null, 2);
+        }
+
+        function adicionarLinha() {
+            const nome = document.getElementById('nomeLinha').value;
+            const id = linhas.length + 1;
+            addLinha(id, nome);
+            document.getElementById('saidaLinhas').textContent = JSON.stringify(linhas, null, 2);
+        }
+
+        function adicionarRota() {
+            const linhaId = Number(document.getElementById('linhaRota').value);
+            const origem = document.getElementById('origemRota').value;
+            const destino = document.getElementById('destinoRota').value;
+            const id = rotas.length + 1;
+            addRota(id, linhaId, origem, destino);
+            document.getElementById('saidaRotas').textContent = JSON.stringify(rotas, null, 2);
+        }
+
+        function adicionarUsuario() {
+            const nome = document.getElementById('nomeUsuario').value;
+            const email = document.getElementById('emailUsuario').value;
+            const id = usuarios.length + 1;
+            addUsuario(id, nome, email);
+            document.getElementById('saidaUsuarios').textContent = JSON.stringify(usuarios, null, 2);
+        }
+
+        function adicionarRastreabilidade() {
+            const onibusId = Number(document.getElementById('onibusRastreio').value);
+            const motoristaId = Number(document.getElementById('motoristaRastreio').value);
+            const rotaId = Number(document.getElementById('rotaRastreio').value);
+            const id = rastreabilidade.length + 1;
+            const timestamp = new Date().toLocaleString();
+            addRastreabilidade(id, onibusId, motoristaId, rotaId, timestamp);
+            document.getElementById('saidaRastreabilidade').textContent = JSON.stringify(rastreabilidade, null, 2);
+        }
+    </script>
 </body>
 </html>
