Fix background image path and enhance welcome text
Updated background image path and improved welcome message.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url("img/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg");
+      background-image: url("./img/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -88,7 +88,7 @@
       <h2>Bem-vindo!</h2>
       <p>
         Este é o painel principal do Sistema de Rastreabilidade de Frota.<br>
-        Escolha um módulo acima para gerenciar motoristas, ônibus, linhas, rotas, usuários ou registros de rastreamento.
+        Escolha uma das <b>opções</b> acima para gerenciar motoristas, ônibus, linhas, rotas, usuários ou registros de rastreamento.
       </p>
     </section>
   </main>
