Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url("./img/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg");
+      background-image: url("./Terminal_de_onibus_Pca.das_Bandeiras_01.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
