--- a/index.html
+++ b/index.html
@@ -5,67 +5,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Rastreabilidade de Frota</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
       background-image: url("./Terminal_de_onibus_Pca.das_Bandeiras_01.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      color: white;
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* Camada escura por cima do fundo */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: -1;
     }
 
     header {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
       text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    nav {
+      padding: 25px 0;
       background-color: rgba(0, 0, 0, 0.7);
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 15px 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
+      font-size: 26px;
       font-weight: bold;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #00bfff;
+      letter-spacing: 1px;
     }
 
     main {
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 30px;
-      max-width: 800px;
-      margin: 40px auto;
-      border-radius: 12px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
+      padding: 20px;
     }
 
-    section {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      margin-top: 40px;
+    }
+
+    nav a {
+      background-color: rgba(255, 255, 255, 0.15);
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 15px 35px;
       border-radius: 10px;
+      font-size: 20px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    }
+
+    nav a:hover {
+      background-color: #00bfff;
+      color: #000;
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #00bfff;
     }
 
     h2 {
       color: #00bfff;
+      margin-bottom: 10px;
+      font-size: 28px;
     }
 
     p {
       font-size: 18px;
+      max-width: 700px;
       line-height: 1.6;
+      color: #f1f1f1;
     }
   </style>
 </head>
@@ -74,23 +101,22 @@
     <h1>Sistema de Rastreabilidade de Frota</h1>
   </header>
 
-  <nav>
-    <a href="motoristas.html">Motoristas</a>
-    <a href="onibus.html">Ônibus</a>
-    <a href="linhas.html">Linhas</a>
-    <a href="rotas.html">Rotas</a>
-    <a href="usuarios.html">Usuários</a>
-    <a href="rastreabilidade.html">Rastreabilidade</a>
-  </nav>
-
   <main>
     <section>
       <h2>Bem-vindo!</h2>
       <p>
-        Este é o painel principal do Sistema de Rastreabilidade de Frota.<br>
-        Escolha uma das <b>opções</b> acima para gerenciar motoristas, ônibus, linhas, rotas, usuários ou registros de rastreamento.
+        Escolha uma das <b>opções</b> abaixo para gerenciar motoristas, ônibus, linhas, rotas, usuários ou registros de rastreamento.
       </p>
     </section>
+
+    <nav>
+      <a href="motoristas.html">Motoristas</a>
+      <a href="onibus.html">Ônibus</a>
+      <a href="linhas.html">Linhas</a>
+      <a href="rotas.html">Rotas</a>
+      <a href="usuarios.html">Usuários</a>
+      <a href="rastreabilidade.html">Rastreabilidade</a>
+    </nav>
   </main>
 </body>
 </html>
