--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       flex-direction: column;
     }
 
-    /* Camada de leve escurecimento — mais transparente agora */
     body::before {
       content: "";
       position: fixed;
@@ -32,7 +31,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.35); /* antes era 0.6, agora mais clara */
+      background-color: rgba(0, 0, 0, 0.35);
       z-index: -1;
     }
 
@@ -40,13 +39,13 @@
       text-align: center;
       padding: 18px 0;
       background-color: rgba(0, 0, 0, 0.6);
-      font-size: 16px; /* reduzido para cerca de 60% do anterior */
+      font-size: 16px;
       font-weight: bold;
       letter-spacing: 1px;
     }
 
     header h1 {
-      font-size: 26px; /* antes estava visualmente perto de 42px */
+      font-size: 26px;
     }
 
     main {
@@ -84,9 +83,8 @@
       margin-top: 20px;
     }
 
-    /* Botões mais contrastantes e legíveis */
     nav a {
-      background-color: rgba(0, 0, 0, 0.7); /* fundo mais escuro */
+      background-color: rgba(0, 0, 0, 0.7);
       color: #ffffff;
       text-decoration: none;
       font-weight: bold;
@@ -116,16 +114,16 @@
     <section>
       <h2>Bem-vindo!</h2>
       <p>
-        Escolha uma das <b>opções</b> abaixo para gerenciar motoristas, ônibus, linhas, rotas, usuários ou registros de rastreamento.
+        Escolha uma das <b>opções</b> abaixo para gerenciar motorista, ônibus, linha, rota, usuário ou registro de rastreabilidade.
       </p>
     </section>
 
     <nav>
-      <a href="motoristas.html">Motoristas</a>
+      <a href="motorista.html">Motorista</a>
       <a href="onibus.html">Ônibus</a>
-      <a href="linhas.html">Linhas</a>
-      <a href="rotas.html">Rotas</a>
-      <a href="usuarios.html">Usuários</a>
+      <a href="linha.html">Linha</a>
+      <a href="rota.html">Rota</a>
+      <a href="usuario.html">Usuário</a>
       <a href="rastreabilidade.html">Rastreabilidade</a>
     </nav>
   </main>
